созданы атрибуты стилей, @Inject ImageLoader'а

--- a/myTranslator/src/main/res/values/attr.xml
+++ b/myTranslator/src/main/res/values/attr.xml
@@ -9,4 +9,6 @@
     <attr name="attrTranslatorItemCv" format="reference" />
     <attr name="attrTranslatorItemTvTranslate" format="reference" />
     <attr name="attrTranslatorItemTvNote" format="reference" />
+
+    <attr name="attrDetailsText" format="reference" />
 </resources>
