--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -28,5 +28,6 @@
         <item name="attrTranslatorItemTvNote">@style/translator_item_tv_note_style.dark_theme</item>
         <item name="attrActivityBottomNavView">@style/activity_bottom_nav_view_style.dark_theme
         </item>
+        <item name="attrDetailsText">@style/details_text_style.dark_theme</item>
     </style>
 </resources>
