--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -28,5 +28,6 @@
         <item name="attrTranslatorItemTvTranslate">@style/translator_item_tv_translate_style</item>
         <item name="attrTranslatorItemTvNote">@style/translator_item_tv_note_style</item>
         <item name="attrActivityBottomNavView">@style/activity_bottom_nav_view_style</item>
+        <item name="attrDetailsText">@style/details_text_style</item>
     </style>
 </resources>
