--- a/myTranslator/src/main/res/values-night/styles.xml
+++ b/myTranslator/src/main/res/values-night/styles.xml
@@ -35,4 +35,8 @@
         <item name="android:textColor">@color/secondaryTextColor</item>
     </style>
 
+    <style name="details_text_style.dark_theme">
+        <item name="android:textColor">@color/secondaryTextColor</item>
+    </style>
+
 </resources>
