--- a/myTranslator/src/main/res/values/styles.xml
+++ b/myTranslator/src/main/res/values/styles.xml
@@ -58,4 +58,10 @@
         <item name="android:textSize">@dimen/translator_item_tv_note_text_size</item>
     </style>
 
+    <style name="details_text_style" parent="">
+        <item name="android:layout_marginEnd">8dp</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">@color/secondaryTextColor</item>
+    </style>
+
 </resources>
