--- a/myTranslator/src/main/res/layout/fragment_details.xml
+++ b/myTranslator/src/main/res/layout/fragment_details.xml
@@ -18,9 +18,9 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_margin="@dimen/details_cv_constraint_margin"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/details_cv_constraint_margin">
 
             <ImageView
                 android:id="@+id/details_imageView"
@@ -80,6 +80,17 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
-
+    <Button
+        android:id="@+id/details_search_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="@string/search"
+        android:textColor="@color/secondaryTextColor"
+        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
+        app:icon="@drawable/ic_baseline_search_24"
+        android:backgroundTint="@color/secondaryLightColor"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
