--- a/myTranslator/src/main/res/layout/fragment_details.xml
+++ b/myTranslator/src/main/res/layout/fragment_details.xml
@@ -88,6 +88,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:text="@string/search"
+        android:elevation="16dp"
         android:textColor="@color/secondaryTextColor"
         style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
         app:icon="@drawable/ic_baseline_search_24"
