--- a/myTranslator/src/main/res/navigation/nav_graph_translator.xml
+++ b/myTranslator/src/main/res/navigation/nav_graph_translator.xml
@@ -28,7 +28,7 @@
         android:label="fragment_details"
         tools:layout="@layout/fragment_details" >
         <argument
-            android:name="model"
-            app:argType="com.example.gb_pprog.domain.model.DomainModel" />
+            android:name="DetailsModel"
+            app:argType="com.example.mytranslator.ui.detailsfragment.DetailsModel" />
     </fragment>
 </navigation>
