--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -12,10 +12,6 @@
         tools:layout="@layout/fragment_timer" />
 
     <include app:graph="@navigation/nav_graph_translator" />
+    <include app:graph="@navigation/nav_graph_github_users" />
 
-    <fragment
-        android:id="@+id/usersFragment"
-        android:name="ru.kosykt.githubusers.ui.usersfragment.UsersFragment"
-        android:label="UsersFragment"
-        tools:layout="@layout/fragment_users" />
 </navigation>
